# debug-console-mcp

./: .chezmoiignore  .gitignore  .rules  .target.toml_bak  README.md  SKILL.md  deploy-all.sh  release.sh
.github/workflows/: ci.yml
completions/: dutabo.bash
docs/: CODE-REVIEW-2026-06-18.md  CODEX-SERIAL-STATUSLINE-AUDIT-2026-06-23.md  DESIGN-v0.3.md  REVIEW-VS-LABGRID-LAVA-2026-06-18.md  RUST-CODE-REVIEW-FIX-REPORT-2026-06-23.md  STAGELEARNER-AUTOLEARN-PLAN.md  tech-design.md
hooks/: .mcp.json.example
hooks/claude/: README.md  lib.py  pre-tool-use.py  session-start.py  session-stop.py  statusline.py  user-prompt-submit.py
mcp/: README.md  boot_detector.py  config.py  hooks_lib.py  hooks_session_start.py  hooks_statusline.py  lock_manager.py  log_manager.py  pyproject.toml  serial_engine.py  server.py  state_manager.py
mcp-python/: .gitignore  INTERNALS.md  __init__.py  command_queue.py  console.py  hooks_user_prompt_submit.py  marker.py  ptx_expect.py  relay_manager.py  start.sh
mcp-python/docs/: code-review.md
mcp-python/tests/: conftest.py
mcp-rs/: Cargo.toml  DEPLOY.md  README.md  TESTING.md  build.rs  deploy.sh
mcp-rs/dut-ctrl/: Cargo.toml  build.rs
mcp-rs/dut-ctrl/src/: lib.rs
mcp-rs/src/: boot_detector.rs  command_queue.rs  config.rs  connection_learner.rs  console.rs  flash.rs  inotify_watcher.rs  lib.rs  lock_manager.rs  log_manager.rs  main.rs  marker.rs  mcp.rs  mcp_http.rs  reconnect.rs  relay_manager.rs  serial_engine.rs  state_manager.rs
mcp-rs/tests/: boot-cycle-test.sh  boot_detector_integration.rs  dutabo_tests.rs  state_detection_regression.rs
mcp/docs/: code-review-rs.md
mcp/tests/: __init__.py  test_boot_detector.py  test_lock_manager.py  test_log_manager.py  test_marker.py  test_mcp_server.py  test_relay_manager.py  test_smoke.py  test_state_manager.py
references/: .target.conf.example  .target.toml.example
scripts/: config-wizard.sh  config.py  diagnose.sh  libmonitor.py  pyproject.toml  start-mcp.sh
skill/: SKILL.md
tests/: e2e-test.sh
