[package]
name = "embedded-debug-mcp"
version = "0.2.0"
edition = "2024"
description = "MCP server for embedded Linux serial console debugging via ser2net"

[[bin]]
name = "embedded-debug-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "time", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
md-5 = "0.10"
inotify = "0.11"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
strsim = "0.11"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true

[lints.rust]
dead_code = "deny"
unused_mut = "deny"
unused_imports = "deny"
unused_variables = "deny"
