[package]
name = "embedded-debug-mcp"
version = "0.2.0"
edition = "2024"
description = "MCP server for embedded Linux serial console debugging via ser2net"

[[bin]]
name = "embedded-debug-mcp"
path = "src/main.rs"

[[bin]]
name = "dutabo"
path = "src/bin/dutabo.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "time", "signal", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
md-5 = "0.10"
inotify = "0.11"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
strsim = "0.11"
libc = "0.2"
dut-ctrl = { path = "dut-ctrl" }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.learn]
cycles = 3
compare_lines = 50
similarity_threshold = 0.93
relay_broken_threshold = 0.10
reset_pulse_ms = 500
capture_timeout_secs = 30.0

[profile.release]
opt-level = "s"
lto = "thin"
strip = true

[lints.rust]
dead_code = "deny"
unused_mut = "deny"
unused_imports = "deny"
unused_variables = "deny"
